--- a/src/blocks/popup-zoom/__image/popup-zoom__image.css
+++ b/src/blocks/popup-zoom/__image/popup-zoom__image.css
@@ -3,6 +3,7 @@
   background-position: center;
   background-size: 100% 100%;
   object-fit: contain;
-  height: 80%;
+  max-width: 75vw;
+  max-height: 75vh;
   margin: 8px 0 10px;
 }
