--- a/src/blocks/popup/__edit/popup__edit.css
+++ b/src/blocks/popup/__edit/popup__edit.css
@@ -5,13 +5,13 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  margin: 34px 36px 0;
+  margin: 34px 36px 54px;
 }
 
 @media screen and (max-width: 600px) {
   .popup__edit {
     font-size: 18px;
     line-height: 22px;
-    margin: 25px 22px 0;
+    margin: 25px 22px 75px;
   }
 }
